--- a/src/main/resources/assets/locale/de_DE.json
+++ b/src/main/resources/assets/locale/de_DE.json
@@ -4,7 +4,7 @@
   "OFFLINE": "Offline",
   "CONNECTING": "Verbinde...",
   "ADD_SERVER_DIALOG_TITLE": "Server hinzufügen - Minosoft",
-  "ADD_SERVER_DIALOG_HEADER": "Bitte gib die Daten ein um fortzufahren",
+  "ADD_SERVER_DIALOG_HEADER": "Bitte gib den Namen und die Serveradrese ein um fortzufahren",
   "ADD_SERVER_DIALOG_DEFAULT_SERVER_NAME": "Ein Minosoft Server",
   "EDIT_SERVER_DIALOG_TITLE": "Server bearbeiten: {0} - Minosoft",
   "EDIT_SERVER_DIALOG_HEADER": "Server bearbeiten",
@@ -19,17 +19,17 @@
   "SERVER_INFO_LAST_CONNECTION_EXCEPTION": "Letzer Verbindungsfehler",
   "SERVER_INFO_VERSION_UNKNOWN": "Unbekannt ({0})",
   "SERVER_INFO_SLOTS_PLAYERS_ONLINE": "{0} / {1}",
-  "SERVER_INFO_REAL_SERVER_ADDRESS": "Echte Serveradresse",
+  "SERVER_INFO_REAL_SERVER_ADDRESS": "Reale Serveradresse",
   "SERVER_INFO_SERVER_BRAND": "Serverart",
   "SERVER_INFO_PLAYERS_ONLINE": "Spieler online",
   "SERVER_INFO_MESSAGE_OF_THE_DAY": "MotD",
-  "SERVER_INFO_SERVER_MODDED_BRAND": "Veränderte Serverart",
+  "SERVER_INFO_SERVER_MODDED_BRAND": "Serverart",
   "SERVER_INFO_SERVER_MODDED_MOD_LIST": "Modliste",
   "SESSIONS_DIALOG_TITLE": "Verbindungen - {0} - Minosoft",
   "ACCOUNTS_ACTION_SELECT": "Auswählen",
   "ACCOUNTS_ACTION_DELETE": "Löschen",
   "SERVER_ACTION_CONNECT": "Verbinden",
-  "SERVER_ACTION_SHOW_INFO": "Info",
+  "SERVER_ACTION_SHOW_INFO": "Infos",
   "SERVER_ACTION_EDIT": "Bearbeiten",
   "SERVER_ACTION_REFRESH": "Aktualisieren",
   "SERVER_ACTION_SESSIONS": "Verbindungen",
@@ -45,8 +45,8 @@
   "MAIN_WINDOW_MENU_SERVERS_REFRESH": "Aktualisieren",
   "MAIN_WINDOW_MENU_SERVERS_HELP": "_Hilfe",
   "MAIN_WINDOW_MENU_SERVERS_HELP_ABOUT": "Über",
-  "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS": "_Nutzer",
-  "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS_SELECTED": "_Nutzer ({0})",
+  "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS": "_Benutzer",
+  "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS_SELECTED": "_Benutzer ({0})",
   "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS_MANAGE": "Verwalten",
   "SESSIONS_MENU_DISCONNECT": "Trennen",
   "SESSIONS_MENU_DISCONNECT_FROM_ALL": "...von allen",
@@ -55,12 +55,12 @@
   "SETTINGS_GENERAL_LOG_LEVEL": "Log Level",
   "SETTINGS_DOWNLOAD": "Download",
   "LOGIN_DIALOG_TITLE": "Anmelden - Minosoft",
-  "LOGIN_DIALOG_HEADER": "Bitte gib deine Zugangsdaten ein um fortzufahren",
+  "LOGIN_DIALOG_HEADER": "Bitte gib deine Minecraft Zugangsdaten ein dich anzumelden",
   "ERROR": "Fehler",
   "MINOSOFT_STILL_STARTING_TITLE": "Bitte warten",
-  "MINOSOFT_STILL_STARTING_HEADER": "Minosoft braucht noch um zu starten...",
-  "MANAGE_ACCOUNTS_TITLE": "Nutzer verwalten",
-  "MANAGE_ACCOUNTS_NO_ACCOUNT_ERROR_TITLE": "Nutzer verwalten",
+  "MINOSOFT_STILL_STARTING_HEADER": "Minosoft muss noch ein paar Dinge erledigen, bevor du es verwenden kannst.\nBitte warte noch ein paar Sekunden...",
+  "MANAGE_ACCOUNTS_TITLE": "Benutzer verwalten",
+  "MANAGE_ACCOUNTS_NO_ACCOUNT_ERROR_TITLE": "Benutzer verwalten",
   "MANAGE_ACCOUNTS_NO_ACCOUNT_ERROR_HEADER": "Bist du sicher?",
   "MANAGE_ACCOUNTS_NO_ACCOUNT_ERROR_ERROR": "Du hast noch keinen Account ausgewählt. Minosoft wird beendet."
 }
