wip: massive gui improvements
Add jfoenix (material design for javafx)
Redesign some parts to include the new changes

--- a/src/main/resources/assets/locale/de_DE.json
+++ b/src/main/resources/assets/locale/de_DE.json
@@ -4,7 +4,7 @@
   "OFFLINE": "Offline",
   "CONNECTING": "Verbinde...",
   "ADD_SERVER_DIALOG_TITLE": "Server hinzufügen - Minosoft",
-  "ADD_SERVER_DIALOG_HEADER": "Bitte gib den Namen und die Serveradrese ein um fortzufahren",
+  "ADD_SERVER_DIALOG_HEADER": "Bitte gib den Namen und die Serveradresse ein um fortzufahren",
   "ADD_SERVER_DIALOG_DEFAULT_SERVER_NAME": "Ein Minosoft Server",
   "EDIT_SERVER_DIALOG_TITLE": "Server bearbeiten: {0} - Minosoft",
   "EDIT_SERVER_DIALOG_HEADER": "Server bearbeiten",
@@ -16,7 +16,7 @@
   "BUTTON_ADD": "Hinzufügen",
   "VERSION_AUTOMATIC": "Automatisch",
   "FORCED_VERSION": "Erzwungene Version",
-  "SERVER_INFO_LAST_CONNECTION_EXCEPTION": "Letzer Verbindungsfehler",
+  "SERVER_INFO_LAST_CONNECTION_EXCEPTION": "Letzter Verbindungsfehler",
   "SERVER_INFO_VERSION_UNKNOWN": "Unbekannt ({0})",
   "SERVER_INFO_SLOTS_PLAYERS_ONLINE": "{0} / {1}",
   "SERVER_INFO_REAL_SERVER_ADDRESS": "Reale Serveradresse",
@@ -24,7 +24,7 @@
   "SERVER_INFO_PLAYERS_ONLINE": "Spieler online",
   "SERVER_INFO_MESSAGE_OF_THE_DAY": "MotD",
   "SERVER_INFO_SERVER_MODDED_BRAND": "Serverart",
-  "SERVER_INFO_SERVER_MODDED_MOD_LIST": "Modliste",
+  "SERVER_INFO_SERVER_MODDED_MOD_LIST": "Mod liste",
   "SESSIONS_DIALOG_TITLE": "Verbindungen - {0} - Minosoft",
   "ACCOUNTS_ACTION_SELECT": "Auswählen",
   "ACCOUNTS_ACTION_DELETE": "Löschen",
@@ -51,7 +51,7 @@
   "SESSIONS_MENU_DISCONNECT": "Trennen",
   "SESSIONS_MENU_DISCONNECT_FROM_ALL": "...von allen",
   "SETTINGS_TITLE": "Einstellungen - Minosoft",
-  "SETTINGS_GENERAL": "Allgemeim",
+  "SETTINGS_GENERAL": "Allgemein",
   "SETTINGS_GENERAL_LOG_LEVEL": "Log Level",
   "SETTINGS_DOWNLOAD": "Download",
   "LOGIN_DIALOG_TITLE": "Anmelden - Minosoft",
