way improved account login dialog

--- a/src/main/resources/assets/locale/de_DE.json
+++ b/src/main/resources/assets/locale/de_DE.json
@@ -54,8 +54,9 @@
   "SETTINGS_GENERAL": "Allgemein",
   "SETTINGS_GENERAL_LOG_LEVEL": "Log Level",
   "SETTINGS_DOWNLOAD": "Download",
-  "LOGIN_DIALOG_TITLE": "Anmelden - Minosoft",
-  "LOGIN_DIALOG_HEADER": "Bitte gib deine Minecraft Zugangsdaten ein dich anzumelden",
+  "LOGIN_DIALOG_TITLE": "Anmelden (Mojang) - Minosoft",
+  "LOGIN_DIALOG_HEADER": "Bitte gib deine Mojang Zugangsdaten ein dich anzumelden",
+  "LOGIN_ACCOUNT_ALREADY_PRESENT": "Account existiert bereits!",
   "ERROR": "Fehler",
   "MINOSOFT_STILL_STARTING_TITLE": "Bitte warten",
   "MINOSOFT_STILL_STARTING_HEADER": "Minosoft muss noch ein paar Dinge erledigen, bevor du es verwenden kannst.\nBitte warte noch ein paar Sekunden...",
