--- a/src/main/resources/assets/locale/en_US.json
+++ b/src/main/resources/assets/locale/en_US.json
@@ -55,8 +55,9 @@
   "SETTINGS_GENERAL": "General",
   "SETTINGS_GENERAL_LOG_LEVEL": "Log level",
   "SETTINGS_DOWNLOAD": "Download",
-  "LOGIN_DIALOG_TITLE": "Login - Minosoft",
+  "LOGIN_DIALOG_TITLE": "Login (Mojang) - Minosoft",
   "LOGIN_DIALOG_HEADER": "Please login to your mojang account",
+  "LOGIN_ACCOUNT_ALREADY_PRESENT": "Account is already present!",
   "ERROR": "Error",
   "MINOSOFT_STILL_STARTING_TITLE": "Please wait",
   "MINOSOFT_STILL_STARTING_HEADER": "Minosoft is still starting up...",
