launcher: add offline accounts

--- a/src/main/resources/assets/locale/de_DE.json
+++ b/src/main/resources/assets/locale/de_DE.json
@@ -35,7 +35,8 @@
   "SERVER_ACTION_SESSIONS": "Verbindungen",
   "SERVER_ACTION_DELETE": "Löschen",
   "SESSIONS_ACTION_DISCONNECT": "Trennen",
-  "ACCOUNT_MODAL_MENU_ADD_ACCOUNT": "Hinzufügen",
+  "ACCOUNT_MODAL_MENU_ADD_MOJANG_ACCOUNT": "Anmelden (Mojang)",
+  "ACCOUNT_MODAL_MENU_ADD_OFFLINE_ACCOUNT": "Hinzufügen (Offline)",
   "MAIN_WINDOW_TITLE": "Minosoft",
   "MAIN_WINDOW_MENU_FILE": "_Datei",
   "MAIN_WINDOW_MENU_FILE_PREFERENCES": "Einstellungen",
@@ -54,8 +55,13 @@
   "SETTINGS_GENERAL": "Allgemein",
   "SETTINGS_GENERAL_LOG_LEVEL": "Log Level",
   "SETTINGS_DOWNLOAD": "Download",
-  "LOGIN_DIALOG_TITLE": "Anmelden (Mojang) - Minosoft",
-  "LOGIN_DIALOG_HEADER": "Bitte gib deine Mojang Zugangsdaten ein dich anzumelden",
+  "LOGIN_MOJANG_DIALOG_TITLE": "Anmelden (Mojang) - Minosoft",
+  "LOGIN_MOJANG_DIALOG_HEADER": "Bitte gib deine Mojang Zugangsdaten ein dich anzumelden",
+  "LOGIN_OFFLINE_DIALOG_TITLE": "Anmelden (Offline) - Minosoft",
+  "LOGIN_OFFLINE_DIALOG_HEADER": "Bitte gib einen Benutzernamen ein (und eine UUID)",
+  "LOGIN_OFFLINE_USERNAME": "Benutzername",
+  "LOGIN_OFFLINE_UUID": "(UUID)",
+  "LOGIN_OFFLINE_ADD_BUTTON": "Hinzufügen",
   "ERROR": "Fehler",
   "MINOSOFT_STILL_STARTING_TITLE": "Bitte warten",
   "MINOSOFT_STILL_STARTING_HEADER": "Minosoft muss noch ein paar Dinge erledigen, bevor du es verwenden kannst.\nBitte warte noch ein paar Sekunden...",
