--- a/src/main/resources/assets/locale/en_US.json
+++ b/src/main/resources/assets/locale/en_US.json
@@ -36,7 +36,8 @@
   "SERVER_ACTION_SESSIONS": "Sessions",
   "SERVER_ACTION_DELETE": "Delete",
   "SESSIONS_ACTION_DISCONNECT": "Disconnect",
-  "ACCOUNT_MODAL_MENU_ADD_ACCOUNT": "Add",
+  "ACCOUNT_MODAL_MENU_ADD_MOJANG_ACCOUNT": "Login (Mojang)",
+  "ACCOUNT_MODAL_MENU_ADD_OFFLINE_ACCOUNT": "Add (Offline)",
   "MAIN_WINDOW_TITLE": "Minosoft",
   "MAIN_WINDOW_MENU_FILE": "_File",
   "MAIN_WINDOW_MENU_FILE_PREFERENCES": "Preferences",
@@ -55,8 +56,13 @@
   "SETTINGS_GENERAL": "General",
   "SETTINGS_GENERAL_LOG_LEVEL": "Log level",
   "SETTINGS_DOWNLOAD": "Download",
-  "LOGIN_DIALOG_TITLE": "Login (Mojang) - Minosoft",
-  "LOGIN_DIALOG_HEADER": "Please login to your mojang account",
+  "LOGIN_MOJANG_DIALOG_TITLE": "Login (Mojang) - Minosoft",
+  "LOGIN_MOJANG_DIALOG_HEADER": "Please login to your mojang account",
+  "LOGIN_OFFLINE_DIALOG_TITLE": "Login (Offline) - Minosoft",
+  "LOGIN_OFFLINE_DIALOG_HEADER": "Please enter a username (and a UUID)",
+  "LOGIN_OFFLINE_USERNAME": "Username",
+  "LOGIN_OFFLINE_UUID": "(UUID)",
+  "LOGIN_OFFLINE_ADD_BUTTON": "Add",
   "ERROR": "Error",
   "MINOSOFT_STILL_STARTING_TITLE": "Please wait",
   "MINOSOFT_STILL_STARTING_HEADER": "Minosoft is still starting up...",
