--- a/src/main/resources/assets/locale/de_DE.json
+++ b/src/main/resources/assets/locale/de_DE.json
@@ -27,7 +27,8 @@
   "SERVER_INFO_SERVER_MODDED_MOD_LIST": "Mod liste",
   "SESSIONS_DIALOG_TITLE": "Verbindungen - {0} - Minosoft",
   "ACCOUNTS_ACTION_SELECT": "Auswählen",
-  "ACCOUNTS_ACTION_DELETE": "Löschen",
+  "ACCOUNTS_ACTION_INFO": "Info",
+  "ACCOUNTS_ACTION_LOGOUT": "Abmelden",
   "SERVER_ACTION_CONNECT": "Verbinden",
   "SERVER_ACTION_SHOW_INFO": "Infos",
   "SERVER_ACTION_EDIT": "Bearbeiten",
