--- a/src/main/resources/assets/locale/en_US.json
+++ b/src/main/resources/assets/locale/en_US.json
@@ -28,7 +28,8 @@
   "SERVER_INFO_SERVER_MODDED_MOD_LIST": "Mod list",
   "SESSIONS_DIALOG_TITLE": "Sessions - {0} - Minosoft",
   "ACCOUNTS_ACTION_SELECT": "Select",
-  "ACCOUNTS_ACTION_DELETE": "Delete",
+  "ACCOUNTS_ACTION_INFO": "Info",
+  "ACCOUNTS_ACTION_LOGOUT": "Logout",
   "SERVER_ACTION_CONNECT": "Connect",
   "SERVER_ACTION_SHOW_INFO": "Info",
   "SERVER_ACTION_EDIT": "Edit",
