Improved german language file

--- a/src/main/resources/assets/locale/de_DE.json
+++ b/src/main/resources/assets/locale/de_DE.json
@@ -10,6 +10,7 @@
   "EDIT_SERVER_DIALOG_HEADER": "Server bearbeiten",
   "SERVER_NAME": "Servername",
   "SERVER_ADDRESS": "Serveradresse",
+  "SERVER_ADDRESS_INPUT_REQUIRED": "Es wird eine Serveradresse benötigt.",
   "VERSION": "Version",
   "BUTTON_SAVE": "Speichern",
   "BUTTON_LOGIN": "Anmelden",
@@ -19,18 +20,17 @@
   "SERVER_INFO_LAST_CONNECTION_EXCEPTION": "Letzter Verbindungsfehler",
   "SERVER_INFO_VERSION_UNKNOWN": "Unbekannt ({0})",
   "SERVER_INFO_SLOTS_PLAYERS_ONLINE": "{0} / {1}",
-  "SERVER_INFO_REAL_SERVER_ADDRESS": "Reale Serveradresse",
-  "SERVER_INFO_SERVER_BRAND": "Serverart",
+  "SERVER_INFO_REAL_SERVER_ADDRESS": "Echte Serveradresse",
+  "SERVER_INFO_SERVER_BRAND": "Servertyp",
   "SERVER_INFO_PLAYERS_ONLINE": "Spieler online",
   "SERVER_INFO_MESSAGE_OF_THE_DAY": "MotD",
-  "SERVER_INFO_SERVER_MODDED_BRAND": "Serverart",
-  "SERVER_INFO_SERVER_MODDED_MOD_LIST": "Mod liste",
+  "SERVER_INFO_SERVER_MODDED_MOD_LIST": "Modliste",
   "SESSIONS_DIALOG_TITLE": "Verbindungen - {0} - Minosoft",
   "ACCOUNTS_ACTION_SELECT": "Auswählen",
   "ACCOUNTS_ACTION_INFO": "Info",
   "ACCOUNTS_ACTION_LOGOUT": "Abmelden",
   "SERVER_ACTION_CONNECT": "Verbinden",
-  "SERVER_ACTION_SHOW_INFO": "Infos",
+  "SERVER_ACTION_SHOW_INFO": "Info",
   "SERVER_ACTION_EDIT": "Bearbeiten",
   "SERVER_ACTION_REFRESH": "Aktualisieren",
   "SERVER_ACTION_SESSIONS": "Verbindungen",
@@ -47,11 +47,11 @@
   "MAIN_WINDOW_MENU_SERVERS_REFRESH": "Aktualisieren",
   "MAIN_WINDOW_MENU_SERVERS_HELP": "_Hilfe",
   "MAIN_WINDOW_MENU_SERVERS_HELP_ABOUT": "Über",
-  "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS": "_Benutzer",
-  "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS_SELECTED": "_Benutzer ({0})",
+  "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS": "_Accounts",
+  "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS_SELECTED": "_Accounts ({0})",
   "MAIN_WINDOW_MENU_SERVERS_ACCOUNTS_MANAGE": "Verwalten",
   "SESSIONS_MENU_DISCONNECT": "Trennen",
-  "SESSIONS_MENU_DISCONNECT_FROM_ALL": "...von allen",
+  "SESSIONS_MENU_DISCONNECT_FROM_ALL": "Von allen",
   "SETTINGS_TITLE": "Einstellungen - Minosoft",
   "SETTINGS_GENERAL": "Allgemein",
   "SETTINGS_GENERAL_LOG_LEVEL": "Log Level",
@@ -66,8 +66,8 @@
   "ERROR": "Fehler",
   "MINOSOFT_STILL_STARTING_TITLE": "Bitte warten",
   "MINOSOFT_STILL_STARTING_HEADER": "Minosoft muss noch ein paar Dinge erledigen, bevor du es verwenden kannst.\nBitte warte noch ein paar Sekunden...",
-  "MANAGE_ACCOUNTS_TITLE": "Benutzer verwalten",
-  "MANAGE_ACCOUNTS_NO_ACCOUNT_ERROR_TITLE": "Benutzer verwalten",
-  "MANAGE_ACCOUNTS_NO_ACCOUNT_ERROR_HEADER": "Bist du sicher?",
+  "MANAGE_ACCOUNTS_TITLE": "Accounts verwalten",
+  "MANAGE_ACCOUNTS_NO_ACCOUNT_ERROR_TITLE": "Accounts verwalten",
+  "MANAGE_ACCOUNTS_NO_ACCOUNT_ERROR_HEADER": "Bist du dir sicher?",
   "MANAGE_ACCOUNTS_NO_ACCOUNT_ERROR_ERROR": "Du hast noch keinen Account ausgewählt. Minosoft wird beendet."
 }
