--- a/src/main/resources/assets/locale/de_DE.json
+++ b/src/main/resources/assets/locale/de_DE.json
@@ -36,6 +36,7 @@
   "SERVER_ACTION_SESSIONS": "Verbindungen",
   "SERVER_ACTION_DELETE": "Löschen",
   "SESSIONS_ACTION_DISCONNECT": "Trennen",
+  "ACCOUNT_MODAL_MENU_ADD_MICROSOFT_ACCOUNT": "Anmelden (Microsoft)",
   "ACCOUNT_MODAL_MENU_ADD_MOJANG_ACCOUNT": "Anmelden (Mojang)",
   "ACCOUNT_MODAL_MENU_ADD_OFFLINE_ACCOUNT": "Hinzufügen (Offline)",
   "MAIN_WINDOW_TITLE": "Minosoft",
@@ -63,6 +64,7 @@
   "LOGIN_OFFLINE_USERNAME": "Benutzername",
   "LOGIN_OFFLINE_UUID": "(UUID)",
   "LOGIN_OFFLINE_ADD_BUTTON": "Hinzufügen",
+  "LOGIN_MICROSOFT_DIALOG_TITLE": "Anmelden (Microsoft) - Mojang",
   "ERROR": "Fehler",
   "MINOSOFT_STILL_STARTING_TITLE": "Bitte warten",
   "MINOSOFT_STILL_STARTING_HEADER": "Minosoft muss noch ein paar Dinge erledigen, bevor du es verwenden kannst.\nBitte warte noch ein paar Sekunden...",
