--- a/src/main/resources/assets/locale/en_US.json
+++ b/src/main/resources/assets/locale/en_US.json
@@ -37,6 +37,7 @@
   "SERVER_ACTION_SESSIONS": "Sessions",
   "SERVER_ACTION_DELETE": "Delete",
   "SESSIONS_ACTION_DISCONNECT": "Disconnect",
+  "ACCOUNT_MODAL_MENU_ADD_MICROSOFT_ACCOUNT": "Login (Microsoft)",
   "ACCOUNT_MODAL_MENU_ADD_MOJANG_ACCOUNT": "Login (Mojang)",
   "ACCOUNT_MODAL_MENU_ADD_OFFLINE_ACCOUNT": "Add (Offline)",
   "MAIN_WINDOW_TITLE": "Minosoft",
@@ -64,6 +65,7 @@
   "LOGIN_OFFLINE_USERNAME": "Username",
   "LOGIN_OFFLINE_UUID": "(UUID)",
   "LOGIN_OFFLINE_ADD_BUTTON": "Add",
+  "LOGIN_MICROSOFT_DIALOG_TITLE": "Login (Microsoft) - Minosoft",
   "ERROR": "Error",
   "MINOSOFT_STILL_STARTING_TITLE": "Please wait",
   "MINOSOFT_STILL_STARTING_HEADER": "Minosoft is still starting up...",
