eros: server list: fix filtering bugs, other fixes

--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -10,3 +10,4 @@ minosoft:status.connection.state.handshaking=Performing handshake with server...
 minosoft:status.connection.state.querying_status=Querying motd...
 minosoft:status.connection.state.querying_ping=Calculating ping...
 minosoft:status.connection.state.ping_done=Status fetched!
+minosoft:status.connection.state.error=Error in connection!
