--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -1,7 +1,9 @@
 minosoft:hello.world=§aHi, my name is §e%1$s§a. I am §e%2$s §ayears old and I want to say the following: §cHello world!
 minosoft:eros_window_title=Minosoft
-minosoft:server_name=Server name
-minosoft:server_address=Server address
+
+minosoft:server.info.server_name=Server name
+minosoft:server.info.server_address=Server address
+minosoft:server.info.forced_version=Forced version
 
 minosoft:status.connection.state.waiting=Waiting...
 minosoft:status.connection.state.resolving=Resolving hostname...
