--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -1,3 +1,5 @@
+minosoft:general.empty=
+
 minosoft:eros_window_title=Minosoft
 
 minosoft:server.info.server_name=Server name
@@ -6,12 +8,13 @@ minosoft:server.info.real_server_address=Real address
 minosoft:server.info.forced_version=Forced version
 minosoft:server.info.remote_version=Remote version
 minosoft:server.info.remote_brand=Remote brand
+minosoft:server.info.active_connections=Active connections
 
-minosoft:status.connection.state.waiting=Waiting...
-minosoft:status.connection.state.resolving=Resolving hostname...
-minosoft:status.connection.state.establishing=Establishing connection...
-minosoft:status.connection.state.handshaking=Performing handshake with server...
-minosoft:status.connection.state.querying_status=Querying motd...
-minosoft:status.connection.state.querying_ping=Calculating ping...
-minosoft:status.connection.state.ping_done=Status fetched!
-minosoft:status.connection.state.error=Error in connection!
+minosoft:connection.status.state.waiting=Waiting...
+minosoft:connection.status.state.resolving=Resolving hostname...
+minosoft:connection.status.state.establishing=Establishing connection...
+minosoft:connection.status.state.handshaking=Performing handshake with server...
+minosoft:connection.status.state.querying_status=Querying motd...
+minosoft:connection.status.state.querying_ping=Calculating ping...
+minosoft:connection.status.state.ping_done=Status fetched!
+minosoft:connection.status.state.error=Error in connection!
