eros: replace some javafx custom stuff with events

--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -5,6 +5,8 @@ minosoft:general.delete=Delete
 
 minosoft:eros_window_title=Minosoft
 
+minosoft:server_type.custom=Custom
+minosoft:server_type.lan=LAN
 
 minosoft:server_info.server_name=Server name
 minosoft:server_info.server_address=Server address
