--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -70,6 +70,16 @@ minosoft:main.account.add.offline.title=Add offline account
 minosoft:main.account.add.offline.header=Add offline account
 minosoft:main.account.add.offline.description=Please enter the username of the account you want to add.
 minosoft:main.account.add.offline.username.label=Username
-minosoft:main.account.add.offline.username.placeholder=Username
+minosoft:main.account.add.offline.username.placeholder=Test user
 minosoft:main.account.add.offline.add_button=Add
 minosoft:main.account.add.offline.cancel_button=Cancel
+
+minosoft:main.account.add.mojang.title=Add mojang account
+minosoft:main.account.add.mojang.header=Add mojang account
+minosoft:main.account.add.mojang.description=Please enter your mojang email (or for legacy accounts their username) and your password to continue
+minosoft:main.account.add.mojang.email.label=E-mail
+minosoft:main.account.add.mojang.email.placeholder=user@example.org
+minosoft:main.account.add.mojang.password.label=Password
+minosoft:main.account.add.mojang.password.placeholder=********
+minosoft:main.account.add.mojang.add_button=Add
+minosoft:main.account.add.mojang.cancel_button=Cancel
