--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -87,3 +87,14 @@ minosoft:main.account.add.mojang.password.label=Password
 minosoft:main.account.add.mojang.password.placeholder=********
 minosoft:main.account.add.mojang.add_button=Add
 minosoft:main.account.add.mojang.cancel_button=Cancel
+
+
+minosoft:connection.kick.title=Kicked from server
+minosoft:connection.kick.header=You got kicked
+minosoft:connection.kick.description=You got kicked from %1$s (connected with: %2$s)
+minosoft:connection.kick.reconnect_button=Reconnect
+minosoft:connection.kick.close_button=Close
+
+minosoft:connection.login_kick.title=Kicked from server
+minosoft:connection.login_kick.header=You got kicked
+minosoft:connection.login_kick.description=You got kicked while logging in from %1$s (connected with: %2$s)
