--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -88,6 +88,8 @@ minosoft:main.account.add.mojang.password.placeholder=********
 minosoft:main.account.add.mojang.add_button=Add
 minosoft:main.account.add.mojang.cancel_button=Cancel
 
+minosoft:main.account.add.microsoft.title=Add microsoft account
+
 
 minosoft:connection.kick.title=Kicked from server
 minosoft:connection.kick.header=You got kicked
