eros: fix some bugs in progress dialogs

--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -22,6 +22,22 @@ minosoft:server_info.ping=Latency
 minosoft:server_info.delete.dialog.description=Do you really want to delete the server %1$s (%2$s)?
 
 
+minosoft:connection.verify_assets.header=Verifying and downloading missing assets. This might take a while...
+
+minosoft:connection.dialog.connecting.header=Connecting...
+minosoft:connection.play.state.waiting=Waiting for connection...
+minosoft:connection.play.state.loading_assets=Loading assets...
+minosoft:connection.play.state.loading=Loading...
+minosoft:connection.play.state.establishing=Establishing connection...
+minosoft:connection.play.state.handshaking=Handshaking...
+minosoft:connection.play.state.logging_in=Logging in...
+minosoft:connection.play.state.joining=Joining...
+minosoft:connection.play.state.spawning=Spawning...
+minosoft:connection.play.state.playing=Everything is working :)
+minosoft:connection.play.state.disconnected=Disconnected
+minosoft:connection.play.state.kicked=Kicked
+minosoft:connection.play.state.error=Connection errored!
+
 minosoft:connection.status.state.waiting=Waiting...
 minosoft:connection.status.state.resolving=Resolving hostname...
 minosoft:connection.status.state.establishing=Establishing connection...
@@ -148,3 +164,4 @@ minosoft:general.dialog.profile.create.cancel_button=Cancel
 minosoft:profiles.profile.name=Name
 minosoft:profiles.profile.description=Description
 minosoft:profiles.profile.disk_path=Disk path
+
