translate connection dialogs, progress bar design

--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -22,9 +22,12 @@ minosoft:server_info.ping=Latency
 minosoft:server_info.delete.dialog.description=Do you really want to delete the server %1$s (%2$s)?
 
 
-minosoft:connection.verify_assets.header=Verifying and downloading missing assets. This might take a while...
+minosoft:connection.dialog.verify_assets.title=Verifying assets... - Minosoft
+minosoft:connection.dialog.verify_assets.header=Verifying and downloading missing assets. This might take a while...
 
+minosoft:connection.dialog.connecting.title=Connecting... - Minosoft
 minosoft:connection.dialog.connecting.header=Connecting...
+
 minosoft:connection.play.state.waiting=Waiting for connection...
 minosoft:connection.play.state.loading_assets=Loading assets...
 minosoft:connection.play.state.loading=Loading...
