--- a/src/main/resources/assets/minosoft/language/en_us.lang
+++ b/src/main/resources/assets/minosoft/language/en_us.lang
@@ -190,3 +190,7 @@ minosoft:menu.pause.disconnect=Disconnect
 minosoft:menu.pause.disconnect.confirm=§cClick again to disconnect
 minosoft:menu.pause.exit=Exit
 minosoft:menu.pause.exit.confirm=§cClick again to exit
+
+
+minosoft:main.about.text=Glad that you test my software :)\nThis project is really in early stage, don't use it on anti cheat protected servers\nI am looking for contributors :) Please help me make this usable
+minosoft:main.about.crash=Create crash report
